@@ -4,6 +4,11 @@ netcfg (1.52) UNRELEASED; urgency=low
   * Loopback network interface name is lo on GNU/Linux and lo0 on
     GNU/kFreeBSD; generalize it with a macro.
 
+  [ Otavio Salvador ]
+  * Add support to disable network configuration using preseeding in
+    netcfg/enable template. Thanks to Anthony L. Awtrey
+    <tony@awtrey.com> for the patch. Closes: #538265
+
  -- Luca Favatella <slackydeb@gmail.com>  Thu, 23 Jul 2009 00:44:44 +0200
 
 netcfg (1.51) unstable; urgency=low
